plugins {
	id 'java-gradle-plugin'
	id 'maven-publish'
	id 'com.gradle.plugin-publish' version '1.3.0'
}

def droolsVersion = '8.44.2.Final'

group = 'io.github.kevin-wimmer'
version = "${droolsVersion}"

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.drools:drools-compiler:${droolsVersion}"

	runtimeOnly "org.drools:drools-mvel:${droolsVersion}"
	runtimeOnly "org.drools:drools-serialization-protobuf:${droolsVersion}"
	runtimeOnly "org.drools:drools-xml-support:${droolsVersion}"

	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
}

gradlePlugin {
	website = 'https://github.com/kevin-wimmer/kie-gradle-plugin'
	vcsUrl = 'https://github.com/kevin-wimmer/kie-gradle-plugin.git'
	plugins {
		kjar {
			id = 'io.github.kevin-wimmer.kjar'
			displayName = 'Kie Gradle Plugin'
			description = 'A Gradle plugin for building Kie JARs'
			implementationClass = 'io.github.kevinwimmer.gradle.plugins.KjarPlugin'
			tags.set(['drools', 'kie'])
		}
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
